--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/LogoIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Software Engineer Portfolio - React, Next.js, TypeScript specialist building scalable web applications" />
+    <meta
+      name="description"
+      content="Computer Science student exploring software development, systems, and game development. Curious, learning-driven, and experimenting with new technologies."
+    />
+
+    <!-- Open Graph (for previews) -->
+    <meta property="og:title" content="Rafli Andrea | Portfolio" />
+    <meta
+      property="og:description"
+      content="Computer Science student exploring software, systems, and creative technology."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://rafliandrea.me" />
+    <meta property="og:image" content="https://rafliandrea.me/LogoIcon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" />
